# polycode

./: .gitignore  Cargo.toml  README.md  build.rs  components.json  eslint.config.js  justfile  package.json  svelte.config.js  vite.config.ts
cgo/: go.mod  go.sum  main.go  payload.go  sqlc.yaml
cgo/migrations/: 20260524195102_initial.down.sql  20260524195102_initial.up.sql  20260524195103_worktree_index.down.sql  20260524195103_worktree_index.up.sql  20260524195105_projects.down.sql  20260524195105_projects.up.sql
cgo/queries/: transcript.sql  workspace.sql
src/: embed.rs  error.rs  lib.rs  main.rs  paths.rs  test_support.rs  utils.rs
src/api/: mod.rs  serde_sqlite.rs  types.rs
src/cgo/: mod.rs  raw.rs
src/components/: AppHeader.svelte  AppHeader.svelte.spec.ts  AppSidebar.svelte  AppSidebar.svelte.spec.ts  AppSidebarTestWrapper.svelte  CliConfigDialog.svelte  CliPickerDialog.svelte  ProjectPanel.svelte  ProjectPanel.svelte.spec.ts  ProjectSelector.svelte  ProjectSelector.svelte.spec.ts  ProjectSelectorDialog.svelte  WorkspaceView.svelte  WorkspaceView.svelte.spec.ts
src/db/: handle.rs  mod.rs  ops.rs
src/git/: worktree.rs
src/lib/: activitypanel.svelte.spec.ts  activitypanel.svelte.ts  cli-profiles.ts  projects.ts  session.ts  sessions.ts  sidebar-tree.spec.ts  sidebar-tree.ts
src/routes/: +layout.server.ts  +page.svelte  (+4 more)
tests/: api_contract_test.rs  directory_api_test.rs  integration_test.rs  message_api_test.rs  project_api_test.rs  session_api_test.rs  worktree_api_test.rs
ui/: .prettierignore  components.json  svelte.config.js  vite.config.ts
(+108 files in other folders)
