[package]
name = "polycode"
version = "0.1.0"
edition = "2021"
autobins = false

[[bin]]
name = "polycode"
path = "src/bin/web.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
dirs = "6"
gix = { version = "0.81", features = ["worktree-mutation"] }
rust-embed = { version = "8", features = ["debug-embed"] }
mime_guess = "2"
urlencoding = "2"
ffi = { git = "ssh://git@github.com/codeignus/ffi.git", branch = "main" }

[dev-dependencies]
axum-test = "16"
tempfile = "3"
